# tinykit

./: .gitignore  LICENSE  README.md  pyproject.toml  setup_venv.sh
src/tinykit/: adsorb.py  bulkviz.py  charge.py  chgcar.py  cli.py  deploy.py  dosplot.py  findsurface.py  irreps.py  kbdcd.py  magviz.py  molecules.json  povray.py  presets.py  slabgen.py  slabviz.py  stmplot.py  surfind.py  vaspio.py  viz.py
src/tinykit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/tinykit/resources/: atom_templates.json  generate_atom_templates.py  incars.yaml
tests/: test_adsorb.py  test_chgcar.py  test_cli.py  test_moments.py  test_povray.py  test_presets.py  test_render.py  test_slabgen.py  test_stmplot.py  test_vaspio.py
