[project]
name = "tinykit"
version = "0.0.1"
description = "A Python package to simplify preparing and analyzing VASP calculations"
authors = [
    { name="William Laderer", email="wtladerer@gmail.com"},
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "numpy",
    "ase",
    "pymatgen",
    "matplotlib",
    "scipy",
    "pyyaml",
    "argcomplete",
]

[dependency-groups]
dev = ["pytest"]

[project.scripts]
tk = "tinykit.cli:main"

[tool.setuptools.package-data]
tinykit = ["resources/*.json", "resources/*.yaml", "molecules.json"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Issues = "https://github.com/wladerer/tinykit/issues"
